--- a/Django Project/appSale/templates/base.html
+++ b/Django Project/appSale/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 {% load static %}
 <html>
  <head>
@@ -42,4 +42,4 @@
  {% endblock content %}
  </div>
  </body>
-</html>
+</html> {% endcomment %}
