--- a/Django Project/appSale/templates/price.html
+++ b/Django Project/appSale/templates/price.html
@@ -96,133 +96,56 @@
           There are many variations of passages of Lorem Ipsum available, but the
         </p>
       </div>
-      <div class="price_container">
+
+
+            <div class="price_container">
+        {% for pr in price %}
         <div class="box">
+
+          
           <div class="detail-box">
             <div class="heading-box">
               <h4>
-                01
+                {{ pr.Price_Number }}
               </h4>
               <h6>
-                Basic
+                {{ pr.Price_Special }}
               </h6>
             </div>
             <div class="text-box">
               <h2>
-                $1000.00
+                {{ pr.Price_Money }}
+
               </h2>
               <ul>
                 <li>
-                  variations of
+                  {{ pr.Price_Line1 }}
                 </li>
                 <li>
-                  passages of Lorem
+                  {{ pr.Price_Line2 }}
                 </li>
                 <li>
-                  Ipsum available,
+                  {{ pr.Price_Line3 }}
                 </li>
                 <li>
-                  but the majority
+                  {{ pr.Price_Line4 }}
                 </li>
                 <li>
-                  have suffered
+                  {{ pr.Price_Line5 }}
                 </li>
-                <li>
-                  alteration in
-                </li>
+          
               </ul>
             </div>
           </div>
           <div class="btn-box">
-            <a href="">
-              Buy Now
+            <a href="{{ pr.Price_URL }}">
+              {{ pr.Price_Line6 }}
             </a>
           </div>
+          
+
         </div>
-        <div class="box">
-          <div class="detail-box">
-            <div class="heading-box">
-              <h4>
-                02
-              </h4>
-              <h6>
-                Standard
-              </h6>
-            </div>
-            <div class="text-box">
-              <h2>
-                $2000.00
-              </h2>
-              <ul>
-                <li>
-                  variations of
-                </li>
-                <li>
-                  passages of Lorem
-                </li>
-                <li>
-                  Ipsum available,
-                </li>
-                <li>
-                  but the majority
-                </li>
-                <li>
-                  have suffered
-                </li>
-                <li>
-                  alteration in
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="btn-box">
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
-        <div class="box">
-          <div class="detail-box">
-            <div class="heading-box">
-              <h4>
-                03
-              </h4>
-              <h6>
-                Premium
-              </h6>
-            </div>
-            <div class="text-box">
-              <h2>
-                $3000.00
-              </h2>
-              <ul>
-                <li>
-                  variations of
-                </li>
-                <li>
-                  passages of Lorem
-                </li>
-                <li>
-                  Ipsum available,
-                </li>
-                <li>
-                  but the majority
-                </li>
-                <li>
-                  have suffered
-                </li>
-                <li>
-                  alteration in
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="btn-box">
-            <a href="">
-              Buy Now
-            </a>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
   </section>
